--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link
+      rel="shortcut icon"
+      href="https://image.flaticon.com/icons/png/128/25/25185.png"
+    />
     <link
       href="http://fonts.googleapis.com/css?family=Great+Vibes"
       rel="stylesheet"
